# ai_robot

./: Cargo.toml
examples/: gen_map.rs  load.rs  train.rs
src/: lib.rs
src/gym/: mod.rs  robot.rs  state.rs
src/model/: actor.rs  agent.rs  critic.rs  memory.rs  mod.rs  noise.rs
src/prelude/: mod.rs
src/robot/: eval.rs  init.rs  mod.rs  train.rs
src/save/models/: exam_ready_model.pt  model.pt
